// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be structurally sound when active 1`] = `
<vm-caption-control class="hidden">
  <vm-control hidden="" keys="c" label="Captions" pressed="">
    <vm-icon href="#vime-captions-on"></vm-icon>
    <vm-tooltip position="top">
      Disable subtitles/captions (c)
    </vm-tooltip>
  </vm-control>
</vm-caption-control>
`;

exports[`should be structurally sound when not active 1`] = `
<vm-caption-control class="hidden">
  <vm-control hidden="" keys="c" label="Captions">
    <vm-icon href="#vime-captions-off"></vm-icon>
    <vm-tooltip position="top">
      Enable subtitles/captions (c)
    </vm-tooltip>
  </vm-control>
</vm-caption-control>
`;
